adding package format 3

--- a/melodic/packages/ros1/package.xml
+++ b/melodic/packages/ros1/package.xml
@@ -1,4 +1,4 @@
-<package>
+<package format="3">
   <name>soss-ros1</name>
   <version>2.0.0</version>
   <description>The SOSS ros1 plugin package</description>
