--- a/melodic/packages/genmsg/package.xml
+++ b/melodic/packages/genmsg/package.xml
@@ -1,4 +1,4 @@
-<package>
+<package format="3">
   <name>soss-genmsg</name>
   <version>2.0.0</version>
   <description>The SOSS genmsg package</description>
