--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = dd1d98b
-	trimbase = 
+	trim = packages/ros1-test
+	base = ad339d6
+	trimbase = dd1d98b
 	parent = upstream
 	previous = 8f2713b
