--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = eea969e
-	trimbase = 
+	trim = packages/genmsg
+	base = d424f97
+	trimbase = eea969e
 	parent = upstream
 	previous = 8f2713b
