--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = da818f0
-	trimbase = 
+	trim = packages/ros1
+	base = 2d2153a
+	trimbase = da818f0
 	parent = upstream
 	previous = 8f2713b
