--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2d2153a
+	base = d2c0762
 	trimbase = 
 	parent = release/melodic/soss-ros1
-	previous = 
+	previous = 2d2153a
