--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 59efca8
+	base = c85eb18
 	trimbase = 
 	parent = debian/melodic/soss-ros1
-	previous = 
+	previous = 59efca8
