--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ad339d6
+	base = 94f29f7
 	trimbase = 
 	parent = release/melodic/soss-ros1-test
-	previous = 
+	previous = ad339d6
