--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bf0a7a6
+	base = 2f7ee40
 	trimbase = 
 	parent = debian/melodic/soss-ros1-test
-	previous = 
+	previous = bf0a7a6
