--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d424f97
+	base = b30ce1f
 	trimbase = 
 	parent = release/melodic/soss-genmsg
-	previous = 
+	previous = d424f97
