--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = da50b5b
+	base = 0b78967
 	trimbase = 
 	parent = debian/melodic/soss-ros1
-	previous = 
+	previous = da50b5b
