--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7e5a212
+	base = 3189ab8
 	trimbase = 
 	parent = debian/melodic/soss-ros1-test
-	previous = 
+	previous = 7e5a212
