--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bfa94d4
+	base = b4f8426
 	trimbase = 
 	parent = debian/melodic/soss-genmsg
-	previous = 
+	previous = bfa94d4
