--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = packages/ros1-test
-	base = 68912b0
-	trimbase = 
+	base = 80915eb
+	trimbase = 68912b0
 	parent = upstream
 	previous = 4bed377
