--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = packages/genmsg
-	base = 8c666b1
-	trimbase = 
+	base = 4692240
+	trimbase = 8c666b1
 	parent = upstream
 	previous = 4bed377
