--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = packages/ros1
-	base = 17f3c30
-	trimbase = 
+	base = 9650ce1
+	trimbase = 17f3c30
 	parent = upstream
 	previous = 4bed377
