--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = decfee7
-	base = a2ac9e7
-	trim = 
-	trimbase = 
+	base = 2a50569
+	trim = packages/ros1
+	trimbase = a2ac9e7
