--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = decfee7
-	base = d9a0e1a
-	trim = 
-	trimbase = 
+	base = 361a6ac
+	trim = packages/ros1-test
+	trimbase = d9a0e1a
