--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = decfee7
-	base = d121574
-	trim = 
-	trimbase = 
+	base = c52d4f7
+	trim = packages/genmsg
+	trimbase = d121574
