--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/soss-genmsg
-	previous = 
-	base = c52d4f7
+	previous = c52d4f7
+	base = 5deb8d7
 	trim = 
 	trimbase = 
