--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/soss-genmsg
-	previous = 
-	base = 217e267
+	previous = 217e267
+	base = d3b771e
 	trim = 
 	trimbase = 
