--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/soss-ros1
-	previous = 
-	base = 2a50569
+	previous = 2a50569
+	base = 24b9dcc
 	trim = 
 	trimbase = 
