--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/soss-ros1
-	previous = 
-	base = 2a852f7
+	previous = 2a852f7
+	base = aa9cb74
 	trim = 
 	trimbase = 
