--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/soss-ros1-test
-	previous = 
-	base = 361a6ac
+	previous = 361a6ac
+	base = 8b54501
 	trim = 
 	trimbase = 
