--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/soss-ros1-test
-	previous = 
-	base = 5dd2f6a
+	previous = 5dd2f6a
+	base = 5bd178b
 	trim = 
 	trimbase = 
