--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/soss-ros1-test
-	previous = 
-	base = 16802dd
+	previous = 16802dd
+	base = d7aed3a
 	trim = 
 	trimbase = 
