--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/soss-genmsg
-	previous = 
-	base = c162367
+	previous = c162367
+	base = c935b84
 	trim = 
 	trimbase = 
