--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/soss-ros1
-	previous = 
-	base = 85cc59a
+	previous = 85cc59a
+	base = 0c4037c
 	trim = 
 	trimbase = 
