--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5f85c5d
-	base = c40b5de
+	base = ff10b00
 	trim = packages/ros1-test
-	trimbase = 
+	trimbase = c40b5de
