--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5f85c5d
-	base = 3a1536f
+	base = fd84789
 	trim = packages/ros1
-	trimbase = 
+	trimbase = 3a1536f
