--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5f85c5d
-	base = 69bead1
+	base = 41e2fb5
 	trim = packages/genmsg
-	trimbase = 
+	trimbase = 69bead1
