--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 75847ef
-	base = 53fe388
+	base = 747755d
 	trim = packages/ros1-test
-	trimbase = 
+	trimbase = 53fe388
