--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 75847ef
-	base = 8d0f05b
+	base = 9f2e3c5
 	trim = packages/ros1
-	trimbase = 
+	trimbase = 8d0f05b
