--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 75847ef
-	base = 698c383
+	base = da05b5c
 	trim = packages/genmsg
-	trimbase = 
+	trimbase = 698c383
