--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a4d0ff1
-	base = 0a146fb
+	base = 7d320ea
 	trim = packages/ros1-test
-	trimbase = 
+	trimbase = 0a146fb
