--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a4d0ff1
-	base = 7b87646
+	base = 678450b
 	trim = packages/ros1
-	trimbase = 
+	trimbase = 7b87646
