--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a4d0ff1
-	base = c79424d
+	base = 9dfab89
 	trim = packages/genmsg
-	trimbase = 
+	trimbase = c79424d
